04_service-mesh/catalogue-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    app: catalogue-db
  name: catalogue-db
spec:
  type: NodePort
  ports:
  - name: mysql
    port: 3306
  selector:
    app: catalogue-db
status:
  loadBalancer: {}
